# substack-archives-downloader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  user_interface.py
downloaders/: pdf_downloader.py  substack_archives_downloader.py
tests/: conftest.py  test_integration.py  test_pdf_downloader.py  test_utils.py
utilities/: errors.py  exceptions.py  helper.py  logging_config.py
